[package]
name = "graphann"
version = "0.6.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Official Rust client SDK for the GraphANN vector database."
repository = "https://github.com/graphann/graphann-client-rust"
homepage = "https://graphann.com"
documentation = "https://docs.rs/graphann"
readme = "README.md"
keywords = ["graphann", "vector-database", "embeddings", "ann", "search"]
categories = ["api-bindings", "database", "asynchronous"]
authors = ["GraphANN <support@graphann.com>"]
publish = false

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
blocking = ["reqwest/blocking"]
metrics = []

[dependencies]
bytes = "1"
flate2 = "1"
futures = "0.3"
http = "1"
lru = "0.12"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1"
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
serde_json = "1"
futures-util = "0.3"
tracing-subscriber = "0.3"

[lib]
name = "graphann"
path = "src/lib.rs"

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
